--- a/app/views/users/_datasets_table_files.html.erb
+++ b/app/views/users/_datasets_table_files.html.erb
@@ -13,7 +13,11 @@
       <td><%= file.fileContent %></td>
       <td><%= file.fileID %></td>
       <td><%= file.accessLevel %></td>
-      <td>TODO</td>
+      <td>
+        <%= hidden_field_tag "user[datasets_cat_a_files][#{file.datasetID}][#{file.fileID}]", 0 %>
+        <%= check_box_tag "user[datasets_cat_a_files][#{file.datasetID}][#{file.fileID}]", 1, file.user_permission(@user).permissionvalue == 1,
+            :id => "file_#{ddi_to_id(file.datasetID)}_#{file.fileID}" %>
+    </td>
     </tr>
   <% end %>
 <% end %>
