--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -6,7 +6,7 @@
   <% else %>
     <%= will_paginate @posts %>
 
-    <table id="search_results" border="1">
+    <table id="search_results">
       <thead>
 	<tr>
 	  <th>Username</th>
