--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OpenidDemo</title>
+    <title>ADA Users</title>
     <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
