--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -22,6 +22,18 @@ body {
     margin: 2em 0;
 }
 
+#title {
+    font-size: 32px;
+    color: #039;
+    padding: 0.5em 0.5em 0.5em 0;
+}
+#subtitle {
+    padding: 0 0 0.5em 0;
+    font-size: 22px;
+    color: #039;
+    border-bottom: 2px solid #6678b1;
+}
+
 #flash_notice {
     padding: 5px;
     border: 1px solid gray;
