--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,62 +1,16 @@
-<%= render 'users/search_form' %>
+<div id="search">
+  <%= render 'users/search_form' %>
 
-<% unless @users.nil? %>
-  <% if @users.empty? %>
-    Your search '<%= @search_query %>' returned no results.
-  <% else %>
-    <%= will_paginate @posts %>
+  <% unless @users.nil? %>
+    <% if @users.empty? %>
+      Your search '<%= @search_query %>' returned no results.
+    <% else %>
+      <%= will_paginate @posts %>
+      <%= link_to "Show all", user_search_path(request.parameters.merge({:paginate => 0, :page => 1})) %>
 
-    <table id="search_results">
-      <thead>
-	<tr>
-	  <th>Username</th>
-	  <th>Password</th>
-	  <th>Role</th>
-	  <th>Email</th>
-	  <th>Institution</th>
-	  <th>Type of work</th>
-	  <th>Position</th>
-	  <th>Date registered</th>
-	  <th>ACSPRI member?</th>
-	  <th>Country</th>
-	  <th>University</th>
-	  <th>Department</th>
-	  <th>Institution type</th>
-	  <th>First name</th>
-	  <th>Surname</th>
-	  <th>Title</th>
-	  <th>Australian Institution Type</th>
-	  <th>Other Position Details</th>
-	  <th>Other Work Type</th>
-	</tr>
-      </thead>
-      <tbody>
-	<% @users.each do |user| %>
-          <tr>
-	    <td><%= link_to user.user, edit_user_path(user) %></td>
-	    <td><%= user.password %></td>
-	    <td><%= user.user_roles.map {|ur| ur.roleID}.join ', ' %></td>
-	    <td><%= user.email %></td>
-	    <td><%= user.institution %></td>
-	    <td><%= user.action %></td>
-	    <td><%= user.position %></td>
-	    <td><%= user.dateregistered %></td>
-	    <td><%= user.acsprimember? ? "Yes" : "No" %></td>
-	    <td><%= user.country ? user.country.Countryname : '' %></td>
-	    <td><%= user.australian_uni ? user.australian_uni.Longuniname : '' %></td>
-	    <td><%= user.australian_gov ? user.australian_gov.name : '' %></td>
-	    <td><%= user.institutiontype %></td>
-	    <td><%= user.fname %></td>
-	    <td><%= user.sname %></td>
-	    <td><%= user.title %></td>
-	    <td><%= user.austinstitution %></td>
-	    <td><%= user.otherpd == 'NULL' ? '' : user.otherpd %></td>
-	    <td><%= user.otherwt == 'NULL' ? '' : user.otherwt %></td>
-	  </tr>
-	<% end %>
-      </tbody>
-    </table>
+      <%= render 'users/search_results' %>
 
-    <%= will_paginate @posts %>
+      <%= will_paginate @posts %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
