--- a/app/views/users/_datasets_table_files.html.erb
+++ b/app/views/users/_datasets_table_files.html.erb
@@ -14,7 +14,7 @@
     <td><%= file.accessLevel %></td>
     <td>
       <%= hidden_field_tag "user[datasets_cat_#{category}_files][#{file.datasetID}][#{file.fileID}]", 0 %>
-      <%= check_box_tag "user[datasets_cat_#{category}_files][#{file.datasetID}][#{file.fileID}]", 1, file.user_permission(@user).permissionvalue == 1,
+      <%= check_box_tag "user[datasets_cat_#{category}_files][#{file.datasetID}][#{file.fileID}]", 1, file.user_permission(@user).permissionvalue > 0,
           :id => "file_#{ddi_to_id(file.datasetID)}_#{file.fileID}" %>
   </td>
   </tr>
