--- a/app/views/layouts/session.html.erb
+++ b/app/views/layouts/session.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>ADA Users</title>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'jquery', 'rails', 'application' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
