--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,14 @@
       <tr><td>Name:</td><td><%= @user.name %></td></tr>
       <tr><td>Email:</td><td><%= @user.email %></td></tr>
       <tr><td>Institution:</td><td><%= @user.affiliation %></td></tr>
-      <tr><td>Type of institution:</td><td><%= "TODO" %></td></tr>
-      <tr><td>Position:</td><td><%= "TODO" %></td></tr>
+      <tr><td>Type of institution:</td><td><%= @user.institutiontype %></td></tr>
+      <tr><td>Position:</td><td><%= @user.position %></td></tr>
       <tr><td>Country:</td><td><%= @user.country.Countryname %></td></tr>
-      <tr><td>Sector:</td><td><%= "TDOO" %></td></tr>
-
-      <tr><td>Last search:</td><td><%= "TODO" %></td></tr>
+      <tr><td>Sector:</td><td><%= @user.sector %></td></tr>
+      <tr><td>Last search:</td><td><%= @user.last_search_time %></td></tr>
       <tr><td>Registered:</td><td><%= @user.dateregistered %></td></tr>
       <tr><td>Signed undertaking:</td><td><%= acsprimember_to_s(@user.acsprimember) %></td></tr>
-      <tr><td>Type of work:</td><td><%= "TODO" %></td></tr>
+      <tr><td>Type of work:</td><td><%= @user.type_of_work %></td></tr>
 
    </table>
 
