Set up edit form with test for appearance and access control

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,27 +1,31 @@
 <% content_for(:title) { "Editing #{@user.user}" } %>
 <h2>User details</h2>
 
-<%= render 'users/user_details_table' %>
+<%= render 'users/form' %>
 
-<hr />
+<% if current_user.admin? %>
+  <%= render 'users/user_details_table' %>
 
-<div id="category_a">
-  <h2>Category A Datasets</h2>
+  <hr />
 
-  <%= render 'users/datasets_table', :table_name => :pending, :table_data => @datasetsPendingA, :category => :a %>
-  <%= render 'users/datasets_table', :table_name => :accessible, :table_data => @datasetsAccessibleA, :category => :a %>
+  <div id="category_a">
+    <h2>Category A Datasets</h2>
 
-  <%= render 'users/datasets_add_form', :datasets => @datasetsCatA, :category => :a %>
-</div>
+    <%= render 'users/datasets_table', :table_name => :pending, :table_data => @datasetsPendingA, :category => :a %>
+    <%= render 'users/datasets_table', :table_name => :accessible, :table_data => @datasetsAccessibleA, :category => :a %>
+
+    <%= render 'users/datasets_add_form', :datasets => @datasetsCatA, :category => :a %>
+  </div>
 
 
-<hr />
+  <hr />
 
-<div id="category_b">
-  <h2>Category B Datasets</h2>
+  <div id="category_b">
+    <h2>Category B Datasets</h2>
 
-  <%= render 'users/datasets_table', :table_name => :pending, :table_data => @datasetsPendingB, :category => :b %>
-  <%= render 'users/datasets_table', :table_name => :accessible, :table_data => @datasetsAccessibleB, :category => :b %>
+    <%= render 'users/datasets_table', :table_name => :pending, :table_data => @datasetsPendingB, :category => :b %>
+    <%= render 'users/datasets_table', :table_name => :accessible, :table_data => @datasetsAccessibleB, :category => :b %>
 
-  <%= render 'users/datasets_add_form', :datasets => @datasetsCatB, :category => :b %>
-</div>
+    <%= render 'users/datasets_add_form', :datasets => @datasetsCatB, :category => :b %>
+  </div>
+<% end %>
