--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,52 +19,4 @@
   </p>
 <% end %>
 
-<%= semantic_form_for @user do |f| %>
-  <%= f.inputs do %>
-    <%= f.input :user, :label => 'Username' %>
-    <%= f.input :password, :label => 'Password' %>
-    <%= f.input :password_confirmation, :label => 'Re-type Password' %>
-    <%= f.input :title, :as => :select,
-                :collection => @user.title_options %>
-    <%= f.input :fname, :label => 'First Name' %>
-    <%= f.input :sname, :label => 'Last Name' %>
-    <%= f.input :email, :label => 'Email Address' %>
-    <%= f.input :email_confirmation, :label => 'Re-type Email Address' %>
-    <%= f.input :position, :as => :select,
-                :collection => @user.position_options %>
-    <%= f.input :otherpd, :label => 'Other Position' %>
-    <%= f.input :action, :label => 'Type of Work', :as => :select,
-                :collection => @user.action_options %>
-    <%= f.input :otherwt, :label => 'Other Type of Work' %>
-    <%= f.input :country, :label_method => :Countryname %>
-
-    <%= f.inputs :id => 'affiliation-aus' do %>
-      <%= f.input :austinstitution, :label => 'Australian Institution',
-                  :as => :radio, :collection => @user.austinstitution_options %>
-      <%= f.input :australian_uni, :label => 'University',
-                  :label_method => :Longuniname %>
-      <% australian_gov_options = build_australian_gov_options %>
-      <%= f.input :australian_gov, :label => 'Government Department/Agency or Research Centre',
-                  :collection => grouped_options_for_select(australian_gov_options, @user.departmentid) %>
-      <%= f.inputs :id => 'user_australian_other_inputs' do %>
-        <%= f.input :other_australian_affiliation,
-                    :label => "Other Institution" %>
-        <%= f.input :other_australian_type,
-                    :label => "Other Institution Type",
-                    :as => :select, :collection => @user.other_aust_inst_types %>
-      <% end %>
-    <% end %>
-
-    <%= f.inputs :id => 'affiliation-non-aus' do %>
-      <%= f.input :non_australian_affiliation,
-                  :label => "Institution" %>
-      <%= f.input :non_australian_type,
-                  :label => "Institution Type",
-                  :as => :select, :collection => @user.non_aust_inst_types %>
-    <% end %>
-
-  <% end %>
-  <%= f.buttons do %>
-    <%= f.commit_button 'Submit' %>
-  <% end %>
-<% end %>
+<%= render 'form' %>
