--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -22,6 +22,9 @@ body {
     margin: 2em 0;
 }
 
+#header {
+    border-bottom: 2px solid #6678b1;
+}
 #title {
     font-size: 32px;
     color: #039;
@@ -31,7 +34,9 @@ body {
     padding: 0 0 0.5em 0;
     font-size: 22px;
     color: #039;
-    border-bottom: 2px solid #6678b1;
+}
+#links {
+    text-align: center;
 }
 
 #account {
