--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
     <%= f.input :fname, :label => 'First Name' %>
     <%= f.input :sname, :label => 'Last Name' %>
     <%= f.input :email, :label => 'Email Address' %>
-    <%= f.input :email_confirmation, :label => 'Re-type Email Address' %>
+    <%= f.input :email_confirmation, :label => 'Re-type Email Address' if @user.new_record? %>
     <%= f.input :position, :as => :select,
                 :collection => @user.position_options %>
     <%= f.input :otherpd, :label => 'Other Position' %>
