--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,10 @@
 <% content_for(:title) { "Editing #{@user.user}" } %>
 <h2>User details</h2>
 
-<%= render 'users/form' %>
+<% if current_user == @user %>
+  <%= render 'users/form' %>
+  <hr />
+<% end %>
 
 <% if current_user.admin? %>
   <%= render 'users/user_details_table' %>
