--- a/app/views/admin/users/_search_results.html.erb
+++ b/app/views/admin/users/_search_results.html.erb
@@ -25,7 +25,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.user, edit_user_path(user) %></td>
+        <td><%= link_to user.user, edit_admin_user_path(user) %></td>
         <td><%= user.password %></td>
         <td><%= user.user_roles.map {|ur| ur.roleID}.join ', ' %></td>
         <td><%= user.email %></td>
