--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
       <div id="links">
 	<%= link_to "My details", user_path(current_user) if current_user %>
-        <%= link_to "Manage users", users_path if current_user and current_user.admin? %>
+        <%= link_to "Manage users", admin_users_path if current_user and current_user.admin? %>
       </div>
     </div>
    
