Most of create, search and basic edit tests pass

--- a/app/views/admin/users/_datasets_table.html.erb
+++ b/app/views/admin/users/_datasets_table.html.erb
@@ -1,5 +1,5 @@
 <% unless table_data.empty? %>
-  <%= form_for @user do |form| %>
+  <%= form_for [:admin, @user] do |form| %>
     <% files_found = false %>
     <h3><%= table_name.capitalize %> datasets</h3>
     <table id="<%= table_name %>">
