--- a/app/views/admin/users/_datasets_add_form.html.erb
+++ b/app/views/admin/users/_datasets_add_form.html.erb
@@ -1,5 +1,5 @@
 <h3>Add access to a dataset</h3>
-<%= form_for @user do |form| %>
+<%= form_for [:admin, @user] do |form| %>
   <%= form.collection_select "datasets_cat_#{category}_to_add".to_sym, datasets, :datasetID, :dataset_description, {}, {:multiple => '1'} %>
   <br />
   <br />
