Password changing works, tests pass

--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -2,12 +2,12 @@
 
 <%= semantic_form_for @user do |f| %>
   <%= f.inputs do %>
-    <%= f.input :old_password, :label => 'Old Password' %>
-    <%= f.input :password, :label => 'New Password' %>
-    <%= f.input :password_confirmation, :label => 'Re-type New Password' %>
+    <%= f.input :password_old, :label => 'Old Password', :input_html => {:value => ''} %>
+    <%= f.input :password, :label => 'New Password', :input_html => {:value => ''} %>
+    <%= f.input :password_confirmation, :label => 'Re-type New Password', :input_html => {:value => ''} %>
   <% end %>
 
   <%= f.buttons do %>
-    <%= f.commit_button 'Submit' %>
+    <%= f.commit_button 'Change Password' %>
   <% end %>
 <% end %>
