--- a/app/views/admin/users/_user_details_table.html.erb
+++ b/app/views/admin/users/_user_details_table.html.erb
@@ -2,12 +2,13 @@
   <tr><td>Name:</td><td><%= @user.name %></td>
   <tr><td>Username:</td><td><%= @user.user %></td></tr>
   <tr><td>Email address:</td><td><%= @user.email %></td></tr>
-  <tr><td>Affiliation:</td><td><%= @user.affiliation %></td></tr>
+  <tr><td>Affiliation:</td><td><%= @user.affiliation %> <%= @user.country ? "(#{@user.country.Countryname})" : '' %></td></tr>
   <tr><td>ACSPRI member?</td><td><%= bool_to_s(@user.acsprimember) %></td></tr>
   <tr><td>Type of work:</td><td><%= @user.action %></td></tr>
   <tr><td>Member since:</td><td><%= Time.parse(@user.dateregistered).strftime("%e %b %Y") %>  (<%= time_ago_in_words(@user.dateregistered) %>)</td></tr>
   <tr><td>Last access:</td><td><%= @user.last_access_time ? time_ago_in_words(@user.last_access_time)+" ago" : "Never" %></td></tr>
   <tr><td>Number of accesses<br />(last 12 months / all time):</td><td><%= @user.num_accesses_in_past(1.year) %> / <%= @user.num_accesses_in_past %></td></tr>
+  <tr><td>Position:</td><td><%= @user.position_s %></td></tr>
 
   <tr id="signed_undertaking">
     <td>Signed undertaking?</td>
