--- a/app/views/admin/users/_user_details_table.html.erb
+++ b/app/views/admin/users/_user_details_table.html.erb
@@ -7,7 +7,16 @@
   <tr><td>Type of work:</td><td><%= @user.action %></td></tr>
   <tr><td>Member since:</td><td><%= Time.parse(@user.dateregistered).strftime("%e %b %Y") %>  (<%= time_ago_in_words(@user.dateregistered) %>)</td></tr>
   <tr><td>Last access:</td><td><%= @user.last_access_time ? time_ago_in_words(@user.last_access_time)+" ago" : "Never" %></td></tr>
-  <tr><td>Number of accesses<br />(last 12 months / all time):</td><td><%= @user.num_accesses_in_past(1.year) %> / <%= @user.num_accesses_in_past %></td></tr>
+  <tr>
+    <td>
+      Number of accesses<br />
+      (last 12 months / all time):
+    </td>
+    <td>
+      Analyse: <%= @user.num_accesses_in_past(1.year, :analyse) %> / <%= @user.num_accesses_in_past(nil, :analyse) %><br />
+      Download: <%= @user.num_accesses_in_past(1.year, :download) %> / <%= @user.num_accesses_in_past(nil, :download) %><br />
+    </td>
+  </tr>
   <tr><td>Position:</td><td><%= @user.position_s %></td></tr>
 
   <tr id="signed_undertaking">
