Search by surname, partial implementation of search by institution

--- a/app/views/admin/users/_search_form.html.erb
+++ b/app/views/admin/users/_search_form.html.erb
@@ -2,6 +2,7 @@
   <p><%= f.text_field :q, :value => @search_query %></p>
   <p>
     <%= f.submit "Search by username" %>
+    <%= f.submit "Search by surname" %>
     <%= f.submit "Search by email address" %>
     <%= f.submit "List all users" %>
   </p>
