--- a/app/views/admin/users/search.html.erb
+++ b/app/views/admin/users/search.html.erb
@@ -1,5 +1,8 @@
 <div id="search">
   <%= render 'search_form' %>
+  <hr />
+  <%= render 'search_institution_form' %>
+  <hr />
 
   <% unless @users.nil? %>
     <% if @users.empty? %>
